# lakeinthelungs

./: .gitattributes  .gitignore  LICENSE  README.md  export-blender44.py  harridan.h  lake.c  meson.build  meson_options.txt
arch/: meson.build
arch/arm/: meson.build
arch/riscv/: meson.build
arch/x86/: meson.build
arch/x86/context/: jump_amd64_elf.s  make_amd64_elf.s
arch/x86/main/: start_amd64_elf.s
arch/x86/syscall/: syscall_amd64_elf.s
assets/shaders/: demo.frag.glsl  demo.vert.glsl  meson.build
engine/: a_moonlit_walk.c  frame_time.c  hadal.c  imgui_dev.cpp  meson.build  riven.c  simulation.c  soma.c  vk_backend.c  vk_command_recorder.c  vk_device.c  vk_gpu_resources.c  vk_mem_alloc.cpp  vk_pipelines.c  vk_swapchain.c  vk_timeline_query.c  vk_xaku.h  xaku.c
engine/android/: meson.build
engine/apple/: meson.build
engine/asm/: make_fcontext_aarch64_aapcs_elf.s
engine/audio/: meson.build  null_audio.c  soma.c
engine/bedrock/: logger.c  mem_utility.c  meson.build  mmap.c  module.c  null_audio.c  null_display.c  null_renderer.c  proc.c  time.c
engine/bedrock/asm/: jump_fcontext_aarch64_aapcs_elf.s  jump_fcontext_amd64_ms_pe.masm  make_fcontext_amd64_ms_pe.masm  make_fcontext_amd64_sysv_elf.s
engine/display/: meson.build
engine/linux/: linux_process.c  meson.build  pipewire.c  wayland.c
engine/renderer/: meson.build  null_renderer.c  vk_commands.c  vk_device.c  vk_mem_alloc.cpp  vk_xaku.h  xaku.c
engine/unix/: meson.build  posix_mmap.c  posix_module.c  posix_threads.c  posix_time.c
engine/windows/: meson.build  win32_mmap.c  win32_module.c  win32_process.c  win32_threads.c  win32_time.c
resources/shaders/: mesh_quantization.glsl  meson.build  shading_pass.vert.glsl  shared_constants.glsl  visibility_pass.frag.glsl  visibility_pass.vert.glsl
source/lake/: alignment.h  atomic.h  bedrock.c  compiler.h  endian.h  filesystem.h  framework.h  inthelungs.h  intrinsics.h  job_system.h  keycodes.h  log.h  macro_magic.h  meson.build  platforms.h  sanitize.h  scancodes.h  simd.h  sys.h  tagged_heap.h  time.h  types.h  utility.c  utility.h  version.h
source/lake/asm/: atomic_c++.hh  atomic_c11.h  atomic_clang.h  atomic_gcc.h  atomic_msvc.h  meson.build  simd_neon.h  simd_rvv.h  simd_wasm.h  simd_x86.h  typedefs.h
source/lake/data_structures/: allocator.h  arena.h  bitset.h  block_allocator.c  block_allocator.h  darray.h  deque.h  hashmap.h  map.h  mpmc_ring.c  mpmc_ring.h  sparse.h  stack_allocator.h  switch_list.c  switch_list.h  tree_allocator.c  tree_allocator.h
source/lake/linux/: filesystem.c  meson.build  process.c
source/lake/math/: bits.c  bits.h  camera.h  complex.h  mat4.h  vec4.h
source/lake/unix/: dll.c  meson.build  mmap.c  threads.c  time.c
src/: a_moonlit_walk.c  bedrock.h  bits.c  frame_time.c  framework.h  game.c  gpuexec.c  hadal.c  harridan.c  hash_table.c  in_the_lungs.h  internal.h  log.c  main.c  meson.build  octavia.c  pelagia.c  pelagial.c  rendering.c  reznor.c  riven.c  silvera.c  simulation.c  soma.c  string.c  ticks.c  vk_buffers.c  vk_commands.c  vk_descriptor_sets.c  vk_device.c  vk_drivers.c  vk_gpu_allocator.c  vk_gpu_profiler.c  vk_pelagia.c  vk_pelagia.h  vk_pelagial.h  vk_pipelines.c  vk_reznor.h  vk_swapchain.c  vk_textures.c
src/amd64/: jump_fcontext_elf.s
src/android/: meson.build
src/apple/: meson.build
src/arch/: atomic.h  endian.h  meson.build
src/arch/x86/: atomic_asm.h  bswap.h  intrin.h  meson.build
src/asm/: meson.build
src/asm/amd64_elf/: jump_fcontext.s  make_fcontext.s  meson.build
src/audio/: dummy.c  meson.build  octavia.c  octavia.h  pipewire.c  silver.c  soma.c
src/audio/backends/: dummy.c  pipewire.c
src/base/: align.h  defines.h  meson.build  riven.c  riven.h
src/bedrock/: align.h  apptimer.c  assert.h  atomics.h  defines.h  endian.h  hash_table.c  intrinsics.h  log.c  log.h  meson.build  riven.c  riven.h  threads.c  ticks.c  time.c  types.h  util_mem.c
src/bedrock/linux/: cpu.c  linux_system.c  meson.build  proc.c
src/bedrock/posix/: dlfcn.c  meson.build  pthread.c  time.c
src/bedrock/unix/: dynamic_lib.c  posix_threads.c  posix_timer.c
src/bedrock/windows/: meson.build  windows.h
src/bedrock/x86/: atomic_asm.h  bswap.h
src/display/: hadal.c  hadopelagic.c  hadopelagic.h  headless.c  meson.build  wayland.c
src/graphics/: meson.build
src/hadal/: display.c  hadal.c  hadopelagic.h  meson.build
src/ipomoea/: utility.c
src/lake/: main.c  meson.build
src/linux/: joystick.h  linux_joystick.h  linux_process.c  meson.build  pipewire.c  process.c  wayland.c  wl_display.c  wl_hadal.c  wl_hadal.h  wl_window.c
src/math/: bits.c  bits_ffs.c  bits_popcnt.c  floor.c  math.c  meson.build  popcnt.h  simd.h  trigonometry.c  types.h
src/memory/: allocator.c  allocator.h  arena_allocator.h  block_allocator.h  ipomoea.c  meson.build  stack_allocator.h  tagged_heap.c  tagged_heap_allocator.c  tagged_heap_allocator.h  tear_allocator.c  tear_allocator.h  utility.c
src/nightingale/: meson.build
src/platform/: dll.c  hadal.c  hadopelagic.c  hadopelagic.h  meson.build  ticks.c
src/platynova/: internal_renderer.h  meson.build  platinum.c  platynova.c
src/renderer/: buffers.c  cobalt.c  drivers.c  gpu_allocator.c  meson.build  mock.c  pelagia.c  pipelines.c  platinum.c  platynova.c  spirv_shaders.c  spirv_shaders.h  swapchain.c  textures.c  vk.h  vk_encore.c  vk_gpu_allocator.c  vk_gpu_profiler.c  vk_pipelines.c  vk_swapchain.c  vk_xaku.h  xaku.c
src/silver/: backend.c  meson.build  renderer.h
src/sys/: meson.build
src/unix/: meson.build  posix_dll.c  posix_plugin.c  posix_poll.c  posix_threads.c  posix_time.c
src/vulkan/: meson.build  spirv_shaders.c  spirv_shaders.h  vk_backend.h  vk_buffers.c  vk_commands.c  vk_descriptor_sets.c  vk_device.c  vk_drivers.c  vk_gpu_allocator.c  vk_gpu_profiler.c  vk_pelagia.c  vk_pelagia.h  vk_pipelines.c  vk_reznor.h  vk_swapchain.c  vk_synchronization.c  vk_textures.c
src/windows/: meson.build  process.c  threads.c  time.c  win32_display.c  win32_hadal.h  win32_process.c  win32_threads.c  win32_time.c  windows.h
(+389 files in other folders)
