option('docs',      type : 'feature', value : 'auto')

# vector extensions
option('avx',       type : 'boolean', value : false)
option('avx2',      type : 'boolean', value : false)
option('neon',      type : 'boolean', value : false)
option('rvv',       type : 'boolean', value : false)

# linux display backends 
option('wayland',   type : 'feature', value : 'auto')
option('xcb',       type : 'feature', value : 'auto')
option('drmkms',    type : 'feature', value : 'auto')

# audio backends
option('wasapi',    type : 'feature', value : 'auto')
option('xaudio2',   type : 'feature', value : 'auto')
option('core',      type : 'feature', value : 'auto')
option('aaudio',    type : 'feature', value : 'auto')
option('webaudio',  type : 'feature', value : 'auto')
option('alsa',      type : 'feature', value : 'auto')
option('jack',      type : 'feature', value : 'auto')
option('pipewire',  type : 'feature', value : 'auto')
option('pulse',     type : 'feature', value : 'auto')
option('oss',       type : 'feature', value : 'auto')

# rendering backends
option('d3d12',     type : 'feature', value : 'auto')
option('metal',     type : 'feature', value : 'auto')
option('webgpu',    type : 'feature', value : 'auto')
option('vulkan',    type : 'feature', value : 'auto')

# VR backends
option('steamvr',   type : 'feature', value : 'auto')
option('openxr',    type : 'feature', value : 'auto')
option('webxr',     type : 'feature', value : 'auto')
